--- a/src/app/word-list/word-list.component.scss
+++ b/src/app/word-list/word-list.component.scss
@@ -12,7 +12,14 @@
     margin: 6% auto;
 
 
-    .wordlist-actions-description {}
+    .wordlist-actions-description {
+      font-family: 'Encode Sans Semi Condensed', sans-serif;
+
+      .selected-wordlist-name {
+        // font-family: 'Encode Sans Semi Condensed', sans-serif;
+        font-size: 2em;
+      }
+    }
 
     .wordlist-actions-container-btn {
       display: flex;
@@ -72,6 +79,7 @@
     }
 
     .word-title {
+      font-family: 'Encode Sans Semi Condensed', sans-serif;
       height: 4em;
       display: flex;
       align-items: center;
@@ -186,24 +194,40 @@
 
         .word-desc-type {
           margin-right: 1em;
+          background: #2775c3;
+        }
+
+        .word-desc-pron {
+          background: #dc0530;
         }
 
         .word-desc-type,
         .word-desc-pron {
           display: inline-block;
-          padding: 0 1em;
-          border: 1px solid black;
-          border-radius: 10px;
-          padding: 0 1em;
+          color: white;
+          border-radius: 5px;
+          padding: .1em 1em;
           font-size: 18px;
-          opacity: 0.6;
         }
       }
 
       .word-desc-info {
+        font-family: "Tondo", Arial, "Helvetica Neue", Helvetica, sans-serif;
         padding: 1em;
         height: 86%;
         overflow-y: auto;
+
+        strong {
+          opacity: 0.6;
+        }
+
+        .word-des,
+        .mnemonics {
+          color: rgb(75, 80, 78);
+          font-size: 16px;
+          font-style: italic;
+          line-height: 24px;
+        }
 
         &::-webkit-scrollbar {
           width: 0.25em;
@@ -248,11 +272,18 @@
           border: 1px solid black;
           border-radius: 10px;
           margin: 0 0.5em;
+          cursor: pointer;
 
           p {
             margin: 0;
             padding: 0.5em;
           }
+        }
+
+        .selected {
+          color: white;
+          background: #A64DF5;
+          border: none;
         }
       }
 
@@ -294,6 +325,12 @@
           color: #01447e;
           text-decoration: underline;
         }
+      }
+
+      .word-image {
+        display: flex;
+        justify-content: center;
+        height: 28em;
       }
     }
   }
