--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <a>
-      <h1>Word List</h1>
+      <h1 routerLink="home">Word List</h1>
     </a>
     <!-- <a href="">HOME</a>
     <a href="">ABOUT</a>
