--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -44,12 +44,12 @@
 
             input {
               width: 80%;
-              height: 2.6em;
+              height: 5em;
             }
 
             button {
               width: 5em;
-              height: 3.1em;
+              height: 5.5em;
               cursor: pointer;
             }
           }
@@ -62,6 +62,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 100px;
         grid-gap: 50px;
+
       }
     }
   }
@@ -164,6 +165,7 @@ main {
 
     .right-pane {
       display: inline-block;
+      margin: 5em 0;
 
       .wordlist-actions {
 
@@ -177,10 +179,17 @@ main {
       }
 
       .word-list-container {
-        div {
+        .word {
+          background: #2271B3;
+          color: white;
           cursor: pointer;
           border-radius: 10px;
-          border: 1px solid black;
+
+          // border: 1px solid black;
+          p {
+            font-size: 2em;
+            text-align: center
+          }
         }
       }
     }
