--- a/src/app/related/related.component.scss
+++ b/src/app/related/related.component.scss
@@ -158,8 +158,13 @@
         /* Add a color on mouse-over */
         ul.breadcrumb li a:hover {
           // color: #01447e;
-          color: #0275d8;
+          color: #536c83;
           // text-decoration: underline;
+        }
+
+        .selected {
+          color: #0192D5;
+          font-weight: bolder;
         }
       }
 
@@ -201,6 +206,7 @@
           list-style-type: none;
           display: flex;
           flex-wrap: wrap;
+          justify-content: space-evenly;
           padding: 0;
           margin: 0;
 
