--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Semi+Condensed');
 @import './variables.scss';
 @import './partials/_scrollbar.scss';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
