started with practice

--- a/src/app/word-list/word-list.component.html
+++ b/src/app/word-list/word-list.component.html
@@ -11,7 +11,7 @@
   </div>
   <div class="wordlist-actions-container-btn">
     <div class="wordlist-practice-blk">
-      <button (click)="selectMode(0)">Practice</button>
+      <button (click)="enterPracticeMode()">Practice</button>
     </div>
     <div class="wordlist-learn-blk">
       <button (click)="selectMode(1)">Learn</button>
