--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,7 @@ body {
   font-family: $font-stack;
   color: $primary-color;
 }
+
+.mat-progress-bar-primary.mat-progress-bar-fill::after {
+  background-color: #4CAF50 !important;
+}
