--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,5 @@ body {
 }
 
 .mat-progress-bar-primary.mat-progress-bar-fill::after {
-  background-color: #4CAF50 !important;
+  background-color: #36d57d !important;
 }
