--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,7 @@
 $font-stack: sans-serif;
 $primary-color: black;
 $white-color:white;
-
+$background-color:#f6f8fa;
 $grid-breakpoints: (xxs: 320px,
 xs:480px,
 sm: 576px,
