--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,8 +16,8 @@
     }
 
     .right-pane {
-      width: 70%;
-      float: right;
+      // width: 70%;
+      // float: right;
 
       .wordlist-actions {
         width: 80%;
@@ -44,13 +44,47 @@
 
             input {
               width: 80%;
-              height: 5em;
+              height: 3em;
+              border-radius: 2em;
+              font-size: 1.5em;
+              outline: none;
+              padding: 0 0.5em;
+              border: 1px solid gray;
+            }
+
+            input:focus {
+              border: 1px solid #2271B3;
             }
 
             button {
               width: 5em;
               height: 5.5em;
               cursor: pointer;
+            }
+
+            .wordlist-box-actions {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              i {
+                font-size: 3em;
+                margin: 0 0.25em;
+              }
+
+              i:hover {
+                border: 2px solid #2271B3;
+                border-radius: 50%;
+                background-color: white;
+              }
+
+              .create-wordlist {
+                color: #36d57d
+              }
+
+              .cancel-wordlist {
+                color: #e60023;
+              }
             }
           }
         }
@@ -60,9 +94,9 @@
         width: 80%;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 100px;
-        grid-gap: 50px;
-
+        grid-auto-rows: 10em;
+        grid-gap: 3em;
+        margin: 0 auto;
       }
     }
   }
@@ -164,14 +198,23 @@ main {
     }
 
     .right-pane {
-      display: inline-block;
-      margin: 5em 0;
+      // display: inline-block;
+      margin: 3em auto;
 
       .wordlist-actions {
+        margin: 1em auto;
 
         .wordlist-create {
-          button {
+          i {
+            color: #8e8e8e;
+            font-size: 3em;
             cursor: pointer;
+          }
+
+          i:hover {
+            border: 2px solid #2271B3;
+            border-radius: 50%;
+            background-color: white;
           }
         }
 
@@ -180,10 +223,11 @@ main {
 
       .word-list-container {
         .word {
-          background: #2271B3;
-          color: white;
+          background: white;
+          color: black;
           cursor: pointer;
           border-radius: 10px;
+          border: 1px solid #2271B3;
 
           // border: 1px solid black;
           p {
