--- a/src/app/home/home.skeleton/home.skeleton.component.scss
+++ b/src/app/home/home.skeleton/home.skeleton.component.scss
@@ -13,7 +13,7 @@
     height: 80px;
     width: 80px;
     border-radius: 50%;
-    background: white;
+    background: map-get($skeleton-colors, bg);
     float: right;
     margin: 1em;
   }
@@ -29,11 +29,11 @@
   margin: 0 auto;
 
   .word {
-    background: white;
+    background: map-get($skeleton-colors, bg);
 
     p {
-      background: #fafafa;
-      color: #fafafa;
+      background: map-get($skeleton-colors, cl);
+      color: map-get($skeleton-colors, cl);
       margin: 1em;
       font-size: 2em;
     }
