--- a/src/app/word-list/learn/learn.component.scss
+++ b/src/app/word-list/learn/learn.component.scss
@@ -1,56 +1,10 @@
-@import './../../variables';
+@import './../../../variables';
 
 /* 
   ##Device = Laptops, Desktops
   ##Screen = B/w 768px to 1200px
 */
 @media screen and (min-width:map-get($grid-breakpoints, md)) {
-
-  .wordlist-actions {
-    width: 600px;
-    height: 4em;
-    margin: 6% auto;
-
-
-    .wordlist-actions-description {
-      font-family: 'Encode Sans Semi Condensed', sans-serif;
-
-      .selected-wordlist-name {
-        // font-family: 'Encode Sans Semi Condensed', sans-serif;
-        font-size: 2em;
-      }
-    }
-
-    .wordlist-actions-container-btn {
-      display: flex;
-      justify-content: space-evenly;
-
-      .wordlist-practice-blk,
-      .wordlist-learn-blk {
-        width: 40%;
-        height: 4em;
-
-        button {
-          cursor: pointer;
-          color: white;
-          font-size: 2em;
-          border: none;
-          background: #2271B3;
-          width: 100%;
-          height: 100%;
-          border-radius: 40px;
-        }
-
-        button:focus {
-          outline: none;
-        }
-
-        button:hover {
-          transform: scale(1.2);
-        }
-      }
-    }
-  }
 
 
   .selected-desc {
@@ -352,34 +306,6 @@
 
     .right-pane {
       width: 100%;
-    }
-  }
-}
-
-
-.skeleton {
-  background: map-get($skeleton-colors, bg);
-  padding: 1em;
-
-  p {
-    background: map-get($skeleton-colors, cl);
-    color: map-get($skeleton-colors, cl);
-    font-size: 0.5em;
-
-    button {
-      background: map-get($skeleton-colors, cl);
-      color: map-get($skeleton-colors, cl);
-    }
-  }
-
-  div {
-    background: map-get($skeleton-colors, cl);
-    color: map-get($skeleton-colors, cl);
-    border-radius: 40px;
-
-    button {
-      background: map-get($skeleton-colors, cl) !important;
-      color: map-get($skeleton-colors, cl) !important;
     }
   }
 }
